# bfm-model

./: .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  aqfm_optimize.sh  check_dataset.py  install.sh  job.sh  makefile  mlflow_server.sh  pyproject.toml  requirements.txt  snellius_finetune.sh  snellius_train.sh
batch_statistics/: europe_Land_2020_grid.pkl  monthly_batches_stats_splitted_channels.json  statistics.json
bfm_model/: utils.py
bfm_model/bfm/: batch_utils.py  bfm.py  dataloader_helpers.py  dataloader_monthly.py  dataloder.py  dataset_basics.py  decoder.py  encoder.py  model.py  model_helpers.py  old_train.py  prediction_viewer.py  rollout_finetuning.py  rollout_viewer.py  rollout_viewer_v2.py  rollouts.py  safetensors.py  scaler.py  test_lighting.py  train_lighting.py  utils.py  vera.py
bfm_model/bfm/configs/: train_config.yaml
bfm_model/mvit/: attention.py  common.py  mvit_model.py
bfm_model/perceiver_components/: helpers.py  helpers_io.py  pos_encoder.py
bfm_model/perceiver_core/: flexible_perceiver_io.py  perceiver_io.py  perceiver_original.py
bfm_model/swin_transformer/core/: swim_core_v2.py  swin_components.py
bfm_model/swin_transformer/helpers/: adaptive_layer_norm.py  fourier_expansion.py  low_rank_adaptation.py  patches_area.py  utilities.py  vera.py  window_operations.py
documentation/: adapting_bfm_to_various_variables.ipynb  batch_statistics.ipynb  batch_visualisation.ipynb  count_species.py  example_prediction.ipynb  prepare_checkpoint.ipynb  rollout_visualisation.py  species_stats_test.pkl  viz_config.yaml
scripts/: split_dataset.sh
shifting_batch/: README.md  create_batch.slurm  entry_point.sh  fail.slurm  train_model.slurm
src/bfm/src/: batch_utils.py  bfm.py  bfm_lighting.py  dataloder.py  dataset_basics.py  decoder.py  encoder.py  rollouts.py  test.py  test_lighting.py  train.py  train_lighting.py  utils.py
src/components/: pos_encoder.py
src/data_preprocessing/: preprocessing.py
src/data_preprocessing/cleaning/: audio.py  edna.py  image.py  text.py
src/data_preprocessing/feature_extraction/: audio.py  edna.py  image.py  text.py
src/data_preprocessing/transformation/: audio.py  edna.py  era5.py  image.py  text.py
src/dataset_creation/: batch.py  create_dataset.py  load_data.py  metadata.py  preprocessing.py  save_data.py
src/mvit/: attention.py  common.py  mvit_model.py
src/perceiver_components/: helpers.py  helpers_io.py  pos_encoder.py
src/perceiver_core/: flexible_perceiver_io.py  perceiver_io.py  perceiver_original.py
src/swin_transformer/core/: swim_core_v2.py  swin_components.py
src/swin_transformer/helpers/: adaptive_layer_norm.py  fourier_expansion.py  low_rank_adaptation.py  (+1 more)
test/: test_attention.py  test_perceiver_original.py  test_pos_encodings.py  test_setup.py
test/test_models_capabilties/: perceiver_io_classification.py
test/test_mvit_capabilities/: test_mvit.py  test_mvit_components.py
test/test_perceiver_capabilties/: flexible_perceiver_io_classification.py  flexible_perceiver_io_classification_prediction.py  perceiver_classifcation.py  perceiver_io_classification.py  perceiver_io_prediction.py
(+15 files in other folders)
