[tool.poetry]
name = "bfm-model"
version = "0.3.0"
description = "First steps towards developing an Artificial Intelligence Foundation Model for Biodiversity research and conservation."
authors = ["Athanasios Trantas <thanasis.trantas@tno.nl>", "Martino Mensio <martino.mensio@tno.nl>", "Sebastian Gribincea <sebastian.gribincea@tno.nl>"]
readme = "README.md"
# package-mode = false # for now, let's keep poetry just for the goal of requirements management
license = "LICENSE.txt"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.26"
torch = ">=2.7.1"
torchvision = ">=0.22.1"
torchaudio = ">=2.7.1"
mlflow = ">=3.1.1"
einops = ">=0.8.0"
hydra-core = ">=1.3.2"
lightning = ">=2.5.2"
psutil = ">=6.1.1"
pynvml = ">=12.0.0"
fvcore = "0.1.5.post20221221"
timm = ">=0.6.13"
typer = ">=0.15.1"
cartopy = ">=0.24.1"
plotly = ">=5.24.1"
nbformat = ">=5.10.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
seaborn = ">=0.13.2"
pandas = ">=2.2.2"
pre-commit = ">=3.7.0"
flake8-pyproject=">=1.2.3" # necessary for flake8 to read pyproject.toml, when executed from pre-commit
torchmetrics = ">=1.4.0"
hydra-core = ">=1.3.2"
scikit-learn = ">=1.5.1"
optuna = ">=4.0.0"
optuna-integration = {version = "^4.0.0", extras = ["pytorch_lightning"]}
timm = ">=1.0.9"
fvcore = ">=0.1.5"
openpyxl = ">=3.1.5"
pytorch-forecasting = ">=1.2.0"
xarray = ">=2024.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
target-version = ['py310']
include = '\.pyi?$'
force-exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist", "venv"]

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
